four-card-feature-section-master/styles.css
:root {
    --light-gray: hsl(0, 0%, 98%);
    --gray: hsl(229, 6%, 66%);
    --dark-gray: hsl(234, 12%, 34%);
    --white: hsl(0, 0%, 100%);

    --red: hsl(0, 78%, 62%);
    --cyan: hsl(180, 62%, 55%);
    --orange: hsl(34, 97%, 64%);
    --blue: hsl(212, 86%, 64%);
}

*, *::before, *::after {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-size: 15px;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    background-color: black;
    margin: 0;
    padding: 0;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
}

.container {
    max-width: 1440px;
    margin: auto;
    background-color: var(--light-gray);
}

header {
    text-align: center;
    color: var(--gray);
    padding-top: 4rem;
    margin: auto;
    width: 35%;
}

.header {
    font-weight: 600;
    color: var(--dark-gray);
    font-size: 2.25rem;
}

.header--muted {
    font-weight: 200;
}

.header>span {
    display: block;
}

.feature-card-group {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 2.5rem;
    padding-bottom: 4rem;
}

.feature-card {
    width: 350px;
    background-color: var(--white);
    box-shadow: 0 10px 10px hsla(234, 12%, 34%, 15%);
    border-radius: 0.3rem;
    padding: 2rem;
    border-top-width: 5px;
    border-top-style: solid;
    margin-top: 1.5rem;
}

.feature-card-group>div:nth-child(1) {
    margin-right: 1.75rem;
}

.feature-card-group>div:nth-child(3) {
    margin-left: 1.75rem;
}

.feature-card__heading {
    font-weight: 600;
    font-size: 1.25rem;
    color: var(--dark-gray);
}

.feature-card__content {
    font-weight: 400;
    font-size: 0.9rem;
    color: var(--gray);
}

.feature-card--icon {
    display: flex;
    justify-content: flex-end;
    width: 100%;
    margin-top: 3rem;
}

.feature-card--cyan {
    border-color: var(--cyan);
}

.feature-card--red {
    border-color: var(--red);
}

.feature-card--orange {
    border-color: var(--orange);
}

.feature-card--blue {
    border-color: var(--blue);
}

@media screen and (max-width: 375px) {
    header {
        width: 80%;
    }

    .header {
        font-weight: 600;
        color: var(--dark-gray);
        font-size: 1.5rem;
    }

    .feature-card-group {
        flex-direction: column;
    }

    .feature-card-group>div:nth-child(1) {
        margin-right: inherit;
    }

    .feature-card-group>div:nth-child(3) {
        margin-left: inherit;
    }

    .feature-card {
        width: 80%;
    }
}

